<resources>
    <string name="app_name">Elecciones 26J</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share">Compartir</string>
    <string name="titulo_ultimas_noticias">ÚLTIMAS NOTICIAS</string>
    <string name="titulo_encuestas">ENCUESTAS</string>
    <string name="dias">días</string>
    <string name="titulo_el_confidencial">El Confidencial</string>

    <string name="elige_partido_politico">Elige partido político</string>
    <string name="pp">PP</string>
    <string name="psoe">PSOE</string>
    <string name="ciudadanos">CIUDADANOS</string>
    <string name="podemos">PODEMOS</string>
    <string name="unidos_podemos">UNIDOS PODEMOS</string>
    <string name="iu">IZQUIERDA UNIDA</string>
    <string name="upyd">UPYD</string>


    <!-- Strings OnBoarding -->
    <string name="introduce_municipio">Introduzca su municipio</string>
    <string name="empezar">Empezar</string>



    <!-- ActionBar Text -->
    <string name="actionbar_presinder">Test de afinidad</string>
    <string name="actionbar_noticias">Últimas noticias</string>
    <string name="actionbar_resultados">Resultados</string>


    <!-- Strings megaencuesta -->
    <string name="header_megaencuesta">¿A quién vas a votar?</string>
    <string name="vota">Votar</string>
    <string name="gracias">¡Muchas gracias por participar!</string>
    <string name="selecciona_partido">Selecciona un partido</string>
    <string name="mensaje_aviso_megaencuesta">En esta pestaña se podrán seguir en directo los resultados de las elecciones del 20D.</string>
    <string name="alerta_conexion_webview"><![CDATA[<p></p><p></p><p><strong>NO ES POSIBLE ACCEDER A LOS RESULTADOS.</strong></p>
    <p>Para poder seguir los resultados en directo necesita conexión a Internet. Por favor, revise su conexión e intentalo de nuevo.</p>]]></string>

    <!-- Strings presinder -->
    <string name="presinderHeader">Descubre a qué candidato te pareces</string>
    <string name="presinderHeader2">Juega a nuestro test de afinidad</string>
    <string name="agree">Estás de acuerdo con</string>
    <string name="disagree">No estás de acuerdo con</string>
    <string name="verResultados">Ver resultados</string>
    <string name="volverAJugar">Seguir Jugando</string>
    <string name="resultadosTest">Resultados del test</string>
    <string name="a_favor">Estoy de acuerdo</string>
    <string name="en_contra">Estoy en contra</string>

    <!-- Creditos -->
    <string name="titulo_creditos">Contribuidores</string>
    <string name="contenido_creditos">Esta aplicación ha sido desarrollada por: ElConfidencialLAB, en colaboración con:\n\n  Jorge Campos de la Mata \n  Antonio Fernández Llamas \n  Sergio Muñoz López \n  Jesús M. Sánchez Martínez \n  Angel Sans Muro </string>
    <string name="atras_creditos">Atrás</string>
    <string name="encuesta_ec">Encuesta El Confidencial</string>
    <string name="contacto">Contacto</string>

    <!-- Publi -->
    <string name="ad_unit">/35003347/ad_unit_native</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_noticia_content">NoticiaContentActivity</string>
    <string name="title_activity_resultados_presinder">resultados_presinder</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_search_locality">SearchLocalityActivity</string>

</resources>
