<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:id="@+id/headerPresinder"
            android:text="@string/presinderHeader"
            android:textColor="@color/titulos"
            android:gravity="center"
            android:textSize="11pt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/headerPresinder2"
            android:text="@string/presinderHeader2"
            android:textColor="@color/titulos"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textSize="7pt"
            android:textAllCaps="true"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:background="@drawable/cards"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="bottom|center_horizontal"
                        android:layout_marginBottom="3dp"
                        android:text=""
                        android:textColor="@color/grey"
                        android:id="@+id/groupQuote"
                        android:textAllCaps="true"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:id="@+id/separator"
                        android:background="@color/material_grey_300"
                        android:layout_gravity="center"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:minHeight="150dp"
                    android:gravity="center"
                    android:layout_marginRight="23dp"
                    android:layout_marginLeft="23dp"
                    android:textSize="8pt"
                    android:textColor="@color/ColorPrimaryDark"
                    android:id="@+id/questionQuote"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/likeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginLeft="15dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/caraok"
                    android:clickable="true"/>
                <ImageView
                    android:id="@+id/dislikeButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="15dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/carano"
                    android:clickable="true"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/aFavor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/a_favor"
                    android:textSize="5pt"
                    android:textColor="@color/color_agree"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="true"/>
                <TextView
                    android:id="@+id/enContra"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/en_contra"
                    android:textSize="5pt"
                    android:textColor="@color/color_disagree"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAllCaps="true"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
