<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- LAYOUT SI LA ENCUESTA AÚN NO SE HA REALIZADO Y NO ES EL DÍA DE LAS ELECCIONES -->

    <!-- CONTENIDO -->
    <LinearLayout
        android:id="@+id/gridMegaencuestaScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- ACTION BAR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/action_bar">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:text="@string/actionbar_resultados"
                android:textColor="@color/grey"
                android:id="@+id/actionBarResultados"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/headerEncuesta"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/header_megaencuesta"
            android:textColor="@color/titulos"
            android:textSize="8pt"
            android:gravity="center"
            android:textAllCaps="true"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@drawable/border_image"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/ppLogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/cslogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/psoelogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/podemosLogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/iulogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/pnvlogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/convergenciaLogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/upydlogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/otroslogo"
                    android:background="@drawable/border_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@color/tabsScrollColor"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">
            <Button
                android:id="@+id/votaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vota"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:background="@drawable/button_resultados"/>
        </LinearLayout>

    </LinearLayout>


    <!-- LAYOUT CON LA ENCUESTA HECHA Y NO ES EL DÍA DE LAS ELECCIONES -->


    <LinearLayout
        android:id="@+id/graficoMegaencuestaScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <!-- ACTION BAR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/action_bar">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:text="@string/actionbar_resultados"
                android:textColor="@color/grey"
                android:id="@+id/actionBarResultados1"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/alert_icon"/>
            <TextView
                android:id="@+id/avisoResultados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:text="@string/mensaje_aviso_megaencuesta"
                android:textColor="@color/titulos"
                android:textSize="7pt"/>
        </LinearLayout>

        <com.elconfidencial.eceleccionesgenerales2015.charts.HorizontalBarChartEC
            android:id="@+id/horizontalBarChart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="20dp"
            android:layout_weight="6" />
        <TextView
            android:id="@+id/gracias"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/gracias"
            android:textColor="@color/titulos"
            android:textSize="10pt"/>

    </LinearLayout>

    <!-- LAYOUT SI ES EL DÍA DE LAS ELECCIONES -->

    <!-- ACTION BAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/action_bar">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:text="@string/actionbar_resultados"
            android:textColor="@color/grey"
            android:id="@+id/actionBarResultadosWebview"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/refreshIcon"
            android:src="@drawable/refresh_icon_results"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/webviewScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <WebView
            android:id="@+id/resultadosWebview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    </LinearLayout>



</LinearLayout>